cluster/apps/storage/longhorn/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-system
  labels:
    kustomize.toolkit.fluxcd.io/prune: disabled
    goldilocks.fairwinds.com/enabled: true
