cluster/apps/storage/longhorn/ingress.yaml
---
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: HOST(`longhorn.${SECRET_DOMAIN}`)
      kind: Rule
      middlewares:
        - name: internal-ipwhitelist
          namespace: traefik
      services:
        - name: longhorn-frontend
          port: 80
  tls:
    secretName: ${SECRET_CERT}
